--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Principle Component Analysis Tutorial
+title: Principle Component Analysis
 date: 2020-08-30
 tags: Unsupervised Learning
 ---
 
-# Unsupervised Dimentionality Reduction  
+## Unsupervised Dimentionality Reduction  
 **via Principle Component Analysis**
 
 In the context of dimensionality reduction, feature extraction can be understood as an approach to data compression with the goal of maintaining most of the relevant information.  
@@ -22,28 +22,30 @@ The orthogonal axes (principle components) of the new subspace can be interprete
 
 Say we have:  
   
-  $$a_1^2 + a_2^2=1$$   
-  $$b_1^2 + b_2^2=1$$    
-  $$a_1 b_1 + a_2 b_2=0$$   
-  $$b_1 a_1 + b_2 a_2=0$$    
+$$a_1^2 + a_2^2=1$$  
+  
+$$b_1^2 + b_2^2=1$$   
+  
+$$a_1 b_1 + a_2 b_2=0$$   
+  
+$$b_1 a_1 + b_2 a_2=0$$    
   
 that is:  
-
- $$\begin{bmatrix} a_1 & a_2\\ b_1 & b_2 \end{bmatrix} \begin{bmatrix} a_1 & b_1\\a_2 & b_2 \end{bmatrix} =
+  
+$$\begin{bmatrix} a_1 & a_2\\ b_1 & b_2 \end{bmatrix} \begin{bmatrix} a_1 & b_1\\a_2 & b_2 \end{bmatrix} =
   \begin{bmatrix} 1 & 0\\ 0 & 1 \end{bmatrix} $$  
-   
- for $$ A = \begin{bmatrix} a_1 & a_2\\ b_1 & b_2 \end{bmatrix} $$  
-     $$ {A^T}= \begin{bmatrix} a_1 & b_1\\ a_2 & b_2 \end{bmatrix} $$  
   
-  $$AA^T = I$$    
+$$ for: A = \begin{bmatrix} a_1 & a_2\\ b_1 & b_2 \end{bmatrix}, {A^T}= \begin{bmatrix} a_1 & b_1\\ a_2 & b_2 \end{bmatrix}, I = \begin{bmatrix} 1 & 0\\ 0 & 1 \end{bmatrix}$$  
+  
+$$AA^T = I$$    
     
-Then A is an orthogonal matrix.
+Then $A$ is an orthogonal matrix.
   
 
 
-# Extracting the principle components step by step
+## Extracting the principle components step by step
 
-# 1.Standardizing the data  
+### 1. Standardizing the data  
 - PCA directions are highly sensitive to data scaling. We need to standardize the features **prior** to PCA.  
 - We will start by loading the Wine datase from:
 https://archive.ics.uci.edu/ml/machine-learning-databases/wine/wine.data 
@@ -212,7 +214,7 @@ X_train_std = sc.fit_transform(X_train)
 X_test_std = sc.fit_transform(X_test)
 ```
 
-# 2. Constructing the covariance matrix  
+## 2. Constructing the covariance matrix  
 - The covariance between two features x<sub>i</sub> and x<sub>j</sub> on population level can be calculated as:  
   
  $$\sigma_ij = \sum_{i=1}^{n}(x_j^{(i)} - \mu_j)(x_k^{(i)}-\mu_k)$$
@@ -229,8 +231,3 @@ X_test_std = sc.fit_transform(X_test)
   
   The covariance matrix is calculating the correlation between the matrix.  
   The goal of PCA can be interpreted as maximize the main diagonal (the covariance of feature and itself) while minimize  the rest of the diagonals (the covariance between different features).  
-
-
-```python
-
-```
