--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -1,14 +1,9 @@
-<head>
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-            tex2jax: {
-            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-            inlineMath: [['$','$']]
-            }
-        });
-    </script>
-</head>
+---
+layout: post
+title: Principle Component Analysis
+date: 2020-08-30
+tags: Unsupervised Learning
+---
 
 ## Unsupervised Dimentionality Reduction  
 **via Principle Component Analysis**
