--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -11,7 +11,7 @@ tags: Unsupervised Learning
 In the context of dimensionality reduction, feature extraction can be understood as an approach to data compression with the goal of maintaining most of the relevant information.  
 Feature extraction is not only used to improve storage space or the computational efficiency of the learning algorithm, but can also improve the predictive performance by reducing the curse of dimensionality—especially if we are working with non-regularized models.  
 
-
+> ![AltText](/Users/wei/Desktop/pca.png)
 > $x_1$,$x_2$ are original feature axes, $pc_1$,$pc_2$ are the principle components.
 
 **Principle Component Analysis (PCA)** aims to find the *directions* of **maximum variance** in high dimensional data and projects it onto a new subspace with fewer dimensions than original one.  
@@ -230,4 +230,256 @@ X_test_std = sc.fit_transform(X_test)
 - **Why we need to calculate the covariance matrix for features?**
   
   The covariance matrix is calculating the correlation between the matrix.  
-  The goal of PCA can be interpreted as maximize the main diagonal (the covariance of feature and itself) while minimize  the rest of the diagonals (the covariance between different features).  
+  The goal of PCA can be interpreted as maximize **the main diagonal** (the 'covariance' between the feature and itself, that is, the variance) while minimize the rest of the diagonals (the covariance between different features).  
+    
+      
+- **Then why do we need to maximimze the variance?**  
+  Note that variance is a measure of the "variability" of the data you have. When you extract the features from your dataset, you would want them to account for the most variability possible: hence the search for maximum variance, so that the *principle components* collect the most "uniqueness" from the data set.
+
+
+```python
+import numpy as np
+
+# for numpy cov function, each row vector is a sample 
+# we need to transpose the matrix so that
+# the dataset is then become (n_samples, n_features)
+con_mat = np.cov(X_train_std.T)
+```
+
+# 3. Obtaining the eigenvalues and eigenvectors 
+**of the covariance matrix**
+
+- Why eigenvalues/vectors?  
+  PCA does not actually increase the variance of your data. Rather, it rotates the dataset in such a way as to align the directions in which it is spread out the most with the principal axes.  
+  When you calculating the eigenvalues, you are actually trying to find a diagonal matrix which the entries outside **the main diagonal** are all zero:  
+    
+  $\begin{bmatrix}
+   \lambda_1 & 0 & 0 & ... & 0\\
+   0 & \lambda_2 & 0 & ... & 0 \\
+   0 & 0 & 0 &... & \lambda_n
+  \end{bmatrix} $    
+    
+  where $\lambda_i$ is the eigenvalue (a scalar) that defines the magnitude of the eigenvector. And eigenvectors represent the principle components (the direction of maximum variance).
+
+
+```python
+eigen_val, eigen_vec = np.linalg.eig(con_mat)
+print('\nEigenvalues \n%s'%eigen_val)
+```
+
+    
+    Eigenvalues 
+    [4.84274532 2.41602459 1.54845825 0.96120438 0.84166161 0.6620634
+     0.51828472 0.34650377 0.3131368  0.10754642 0.21357215 0.15362835
+     0.1808613 ]
+
+
+# 4. Sorting the eigenvalues 
+**by decreasing order to rank the eigenvectors**  
+  
+Since we want to decrease the dimensionality of our dataset by compressing it into new feature subspace, we only select the subset of the eigenvectors(principle components) that contains most of the information(variance).  
+Now let's plot the *variance explained ratios* of the eigenvalues:  
+  
+$\frac{\lambda_i}{\sum_{i=1}^{n}\lambda_i}$
+
+
+```python
+tot = sum(eigen_val)
+history = [(i/tot) for i in
+          sorted(eigen_val,reverse = True)]
+
+import matplotlib.pyplot as plt
+plt.bar(range(1,14),history, align = 'center', color = 'hotpink')
+plt.ylabel('Explained variance ratio')
+plt.xlabel('Principle component index')
+```
+
+
+
+
+    Text(0.5, 0, 'Principle component index')
+
+
+
+
+![png](output_19_1.png)
+
+
+We can see that the first two principle components combined to explain almost 60% of the variance in the dataset.
+
+# 5. Select K eigenvectors
+**which correspond to K largest eigenvalues**  
+  
+K is the dimensionality of the new feature subspace. 
+
+
+```python
+eigen_pair = [(np.abs(eigen_val[i]),eigen_vec[:,i])
+             for i in range(len(eigen_val))]
+
+eigen_pair.sort(key = lambda k: k[0], reverse = True)
+```
+
+# 6. Construct a projection matrix W
+**from K eigenvectors**  
+  
+Here we let k = 2 for convinience.  
+
+
+```python
+# np.hstack: split an array into 
+# multiple sub-arrays horizontally (column-wise)
+w = np.hstack((eigen_pair[0][1][:, np.newaxis], 
+               eigen_pair[1][1][:, np.newaxis]))
+print('Matrix W:\n',w)
+```
+
+    Matrix W:
+     [[-0.13724218  0.50303478]
+     [ 0.24724326  0.16487119]
+     [-0.02545159  0.24456476]
+     [ 0.20694508 -0.11352904]
+     [-0.15436582  0.28974518]
+     [-0.39376952  0.05080104]
+     [-0.41735106 -0.02287338]
+     [ 0.30572896  0.09048885]
+     [-0.30668347  0.00835233]
+     [ 0.07554066  0.54977581]
+     [-0.32613263 -0.20716433]
+     [-0.36861022 -0.24902536]
+     [-0.29669651  0.38022942]]
+
+
+# 7. Transform the features using matrix W
+**to obtain the new K-dimensional feature subspace**  
+  
+$X^{'} = XW $
+
+
+```python
+# dot:inner product
+X_train_pca = X_train_std.dot(w)
+print(X_train_pca.shape)
+```
+
+    (124, 2)
+
+
+- Now the transformed training set has been stored as 124 * 2-dimensionl matrix.  
+  We can then visualize it in a 2-dimensional scatter plot.
+
+
+```python
+colors = ['plum','khaki','turquoise']
+markers = ['s','x','o']
+for l,c,m in zip(np.unique(y_train), colors, markers):
+    plt.scatter(X_train_pca[y_train == l, 0],
+                X_train_pca[y_train == l, 1],
+                c = c, label = l, marker = m)
+plt.xlabel('PC 1')
+plt.ylabel('PC 2')
+plt.legend(loc='lower left')
+plt.show()
+```
+
+
+![png](output_28_0.png)
+
+
+- We can see that the data spread more on pc1 (the first principle component) than pc2, which is consistent with the variance explained ratios that we've calculated in section 4.
+
+---------------
+# PCA in scikit-learn
+
+**1. PAC transform the dataset**   
+  
+**2. Classify the transformed samples via logistic regression**  
+
+
+```python
+from sklearn.decomposition import PCA
+
+pca = PCA(n_components=2)
+X_train_pca_sk = pca.fit_transform(X_train_std)
+```
+
+
+```python
+from sklearn.linear_model import LogisticRegression
+
+lr = LogisticRegression()
+lr.fit(X_train_pca_sk,y_train)
+```
+
+
+
+
+    LogisticRegression()
+
+
+
+**3. Visualize the decision regions**
+
+
+```python
+from matplotlib.colors import ListedColormap
+
+def plot_decision_regions(X, y, classifier, resolution=0.02):
+    # setup marker generator and color map
+    markers = ('s', 'x', 'o', '^', 'v')
+    colors = ('lightpink', 'slateblue', 'gold', 'lightgreen', 'lightcyan') 
+    cmap = ListedColormap(colors[:len(np.unique(y))])
+    
+    # plot the decision surface
+    x1_min, x1_max = X[:, 0].min() - 1, X[:, 0].max() + 1 
+    x2_min, x2_max = X[:, 1].min() - 1, X[:, 1].max() + 1
+    xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution),
+                           np.arange(x2_min, x2_max, resolution)) 
+    Z = classifier.predict(np.array([xx1.ravel(), xx2.ravel()]).T)
+    Z = Z.reshape(xx1.shape)
+    plt.contourf(xx1, xx2, Z, alpha=0.4, cmap=cmap) 
+    plt.xlim(xx1.min(), xx1.max()) 
+    plt.ylim(xx2.min(), xx2.max())
+    
+    # plot class samples
+    for idx, cl in enumerate(np.unique(y)):
+        plt.scatter(x=X[y == cl, 0], y=X[y == cl, 1],
+                    alpha=0.6, c=cmap(idx), edgecolor='black', 
+                    marker=markers[idx], label=cl)
+
+```
+
+
+```python
+from matplotlib.axes._axes import _log as matplotlib_axes_logger
+matplotlib_axes_logger.setLevel('ERROR')
+
+plot_decision_regions(X_train_pca_sk, y_train, classifier=lr)
+```
+
+
+![png](output_36_0.png)
+
+
+Now let's plot the decision regions of the logistic regression on the transformed test dataset.
+
+
+```python
+# transform() : parameters generated from fit() method,
+# applied upon model to generate transformed data set.
+X_test_pca_sk = pca.transform(X_test_std)
+
+plot_decision_regions(X_test_pca_sk, y_test, classifier=lr)
+```
+
+
+![png](output_38_0.png)
+
+
+The result indicates that logistic regression performs quite well on this two-dimensional feature subspace.
+
+---------------
+# References
+1. Python Machine Learning - Second Edition  
+2. https://stackoverflow.com/questions/12395542/why-do-we-maximize-variance-during-principal-component-analysis
+3. https://www.cnblogs.com/LittleHann/p/10859016.html#_label2
