--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -11,7 +11,7 @@ tags: Unsupervised Learning
 In the context of dimensionality reduction, feature extraction can be understood as an approach to data compression with the goal of maintaining most of the relevant information.  
 Feature extraction is not only used to improve storage space or the computational efficiency of the learning algorithm, but can also improve the predictive performance by reducing the curse of dimensionality—especially if we are working with non-regularized models.  
 
-> ![AltText](/Users/wei/Desktop/pca.png)
+> ![AltText](https://wzhou007-0912.github.io//assets/screenshot/output_19_1.png)
 > $x_1$,$x_2$ are original feature axes, $pc_1$,$pc_2$ are the principle components.
 
 **Principle Component Analysis (PCA)** aims to find the *directions* of **maximum variance** in high dimensional data and projects it onto a new subspace with fewer dimensions than original one.  
@@ -253,12 +253,12 @@ con_mat = np.cov(X_train_std.T)
   PCA does not actually increase the variance of your data. Rather, it rotates the dataset in such a way as to align the directions in which it is spread out the most with the principal axes.  
   When you calculating the eigenvalues, you are actually trying to find a diagonal matrix which the entries outside **the main diagonal** are all zero:  
     
-  $\begin{bmatrix}
+  $$\begin{bmatrix}
    \lambda_1 & 0 & 0 & ... & 0\\
    0 & \lambda_2 & 0 & ... & 0 \\
    0 & 0 & 0 &... & \lambda_n
-  \end{bmatrix} $    
-    
+  \end{bmatrix} $$    
+  
   where $\lambda_i$ is the eigenvalue (a scalar) that defines the magnitude of the eigenvector. And eigenvectors represent the principle components (the direction of maximum variance).
 
 
