--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -11,7 +11,7 @@ tags: Unsupervised Learning
 In the context of dimensionality reduction, feature extraction can be understood as an approach to data compression with the goal of maintaining most of the relevant information.  
 Feature extraction is not only used to improve storage space or the computational efficiency of the learning algorithm, but can also improve the predictive performance by reducing the curse of dimensionality—especially if we are working with non-regularized models.  
 
-> ![AltText](https://wzhou007-0912.github.io//assets/screenshot/output_19_1.png)
+> ![PCA](https://wzhou007-0912.github.io/assets/pcs.jpg)
 > $x_1$,$x_2$ are original feature axes, $pc_1$,$pc_2$ are the principle components.
 
 **Principle Component Analysis (PCA)** aims to find the *directions* of **maximum variance** in high dimensional data and projects it onto a new subspace with fewer dimensions than original one.  
@@ -214,7 +214,7 @@ X_train_std = sc.fit_transform(X_train)
 X_test_std = sc.fit_transform(X_test)
 ```
 
-## 2. Constructing the covariance matrix  
+### 2. Constructing the covariance matrix  
 - The covariance between two features x<sub>i</sub> and x<sub>j</sub> on population level can be calculated as:  
   
  $$\sigma_ij = \sum_{i=1}^{n}(x_j^{(i)} - \mu_j)(x_k^{(i)}-\mu_k)$$
@@ -246,7 +246,7 @@ import numpy as np
 con_mat = np.cov(X_train_std.T)
 ```
 
-# 3. Obtaining the eigenvalues and eigenvectors 
+### 3. Obtaining the eigenvalues and eigenvectors 
 **of the covariance matrix**
 
 - Why eigenvalues/vectors?  
@@ -274,13 +274,13 @@ print('\nEigenvalues \n%s'%eigen_val)
      0.1808613 ]
 
 
-# 4. Sorting the eigenvalues 
+### 4. Sorting the eigenvalues 
 **by decreasing order to rank the eigenvectors**  
   
 Since we want to decrease the dimensionality of our dataset by compressing it into new feature subspace, we only select the subset of the eigenvectors(principle components) that contains most of the information(variance).  
 Now let's plot the *variance explained ratios* of the eigenvalues:  
   
-$\frac{\lambda_i}{\sum_{i=1}^{n}\lambda_i}$
+$$\frac{\lambda_i}{\sum_{i=1}^{n}\lambda_i}$$
 
 
 ```python
@@ -307,7 +307,7 @@ plt.xlabel('Principle component index')
 
 We can see that the first two principle components combined to explain almost 60% of the variance in the dataset.
 
-# 5. Select K eigenvectors
+### 5. Select K eigenvectors
 **which correspond to K largest eigenvalues**  
   
 K is the dimensionality of the new feature subspace. 
@@ -320,7 +320,7 @@ eigen_pair = [(np.abs(eigen_val[i]),eigen_vec[:,i])
 eigen_pair.sort(key = lambda k: k[0], reverse = True)
 ```
 
-# 6. Construct a projection matrix W
+### 6. Construct a projection matrix W
 **from K eigenvectors**  
   
 Here we let k = 2 for convinience.  
@@ -350,7 +350,7 @@ print('Matrix W:\n',w)
      [-0.29669651  0.38022942]]
 
 
-# 7. Transform the features using matrix W
+### 7. Transform the features using matrix W
 **to obtain the new K-dimensional feature subspace**  
   
 $X^{'} = XW $
