--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -11,7 +11,7 @@ tags: Unsupervised Learning
 In the context of dimensionality reduction, feature extraction can be understood as an approach to data compression with the goal of maintaining most of the relevant information.  
 Feature extraction is not only used to improve storage space or the computational efficiency of the learning algorithm, but can also improve the predictive performance by reducing the curse of dimensionality—especially if we are working with non-regularized models.  
 
-> ![PCA](https://github.com/WZHOU007-0912/images/blob/master/PCA%20index.png)
+> ![PCA Index](https://github.com/WZHOU007-0912/images/blob/master/pca.jpg)
 > $x_1$,$x_2$ are original feature axes, $pc_1$,$pc_2$ are the principle components.
 
 **Principle Component Analysis (PCA)** aims to find the *directions* of **maximum variance** in high dimensional data and projects it onto a new subspace with fewer dimensions than original one.  
@@ -302,7 +302,7 @@ plt.xlabel('Principle component index')
 
 
 
-![png](output_19_1.png)
+![](https://github.com/WZHOU007-0912/images/blob/master/PCA%20index.png)
 
 
 We can see that the first two principle components combined to explain almost 60% of the variance in the dataset.
@@ -383,7 +383,7 @@ plt.show()
 ```
 
 
-![png](output_28_0.png)
+![](https://github.com/WZHOU007-0912/images/blob/master/output_28_0.png)
 
 
 - We can see that the data spread more on pc1 (the first principle component) than pc2, which is consistent with the variance explained ratios that we've calculated in section 4.
@@ -458,7 +458,7 @@ plot_decision_regions(X_train_pca_sk, y_train, classifier=lr)
 ```
 
 
-![png](output_36_0.png)
+![](https://github.com/WZHOU007-0912/images/blob/master/output_36_0.png)
 
 
 Now let's plot the decision regions of the logistic regression on the transformed test dataset.
@@ -473,7 +473,7 @@ plot_decision_regions(X_test_pca_sk, y_test, classifier=lr)
 ```
 
 
-![png](output_38_0.png)
+![](https://github.com/WZHOU007-0912/images/blob/master/output_38_0.png)
 
 
 The result indicates that logistic regression performs quite well on this two-dimensional feature subspace.
