--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -11,7 +11,7 @@ tags: Unsupervised Learning
 In the context of dimensionality reduction, feature extraction can be understood as an approach to data compression with the goal of maintaining most of the relevant information.  
 Feature extraction is not only used to improve storage space or the computational efficiency of the learning algorithm, but can also improve the predictive performance by reducing the curse of dimensionality—especially if we are working with non-regularized models.  
 
-> ![PCA Index](https://github.com/WZHOU007-0912/images/blob/master/pca.jpg)
+> ![PCA index](https://wzhou007-0912.github.io/assests/pca.jpg)
 > $x_1$,$x_2$ are original feature axes, $pc_1$,$pc_2$ are the principle components.
 
 **Principle Component Analysis (PCA)** aims to find the *directions* of **maximum variance** in high dimensional data and projects it onto a new subspace with fewer dimensions than original one.  
