--- a/_posts/2020-08-30-PCA.md
+++ b/_posts/2020-08-30-PCA.md
@@ -1,21 +1,21 @@
 ---
 layout: post
-title: Principle Component Analysis
+title: Principal Component Analysis
 date: 2020-08-30
 tags: Unsupervised Learning
 ---
 
 ## Unsupervised Dimentionality Reduction  
-**via Principle Component Analysis**
+**via Principal Component Analysis**
 
 In the context of dimensionality reduction, feature extraction can be understood as an approach to data compression with the goal of maintaining most of the relevant information.  
 Feature extraction is not only used to improve storage space or the computational efficiency of the learning algorithm, but can also improve the predictive performance by reducing the curse of dimensionality—especially if we are working with non-regularized models.  
 
 > ![PCA Index](https://github.com/WZHOU007-0912/images/raw/master/pca.jpg)
-> $x_1$,$x_2$ are original feature axes, $pc_1$,$pc_2$ are the principle components.
+> $x_1$,$x_2$ are original feature axes, $pc_1$,$pc_2$ are the principal components.
 
-**Principle Component Analysis (PCA)** aims to find the *directions* of **maximum variance** in high dimensional data and projects it onto a new subspace with fewer dimensions than original one.  
-The orthogonal axes (principle components) of the new subspace can be interpreted as the directions of maximum given the constraints that new features are **orthogonal** to each other.  
+**Principal Component Analysis (PCA)** aims to find the *directions* of **maximum variance** in high dimensional data and projects it onto a new subspace with fewer dimensions than original one.  
+The orthogonal axes (principal components) of the new subspace can be interpreted as the directions of maximum given the constraints that new features are **orthogonal** to each other.  
 (*orthogonal means uncorrelated*)
 
 - What is an orthogonal matrix?  
@@ -43,7 +43,7 @@ Then $A$ is an orthogonal matrix.
   
 
 
-## Extracting the principle components step by step
+## Extracting the principal components step by step
 
 ### 1. Standardizing the data  
 - PCA directions are highly sensitive to data scaling. We need to standardize the features **prior** to PCA.  
@@ -234,7 +234,7 @@ X_test_std = sc.fit_transform(X_test)
     
       
 - **Then why do we need to maximimze the variance?**  
-  Note that variance is a measure of the "variability" of the data you have. When you extract the features from your dataset, you would want them to account for the most variability possible: hence the search for maximum variance, so that the *principle components* collect the most "uniqueness" from the data set.
+  Note that variance is a measure of the "variability" of the data you have. When you extract the features from your dataset, you would want them to account for the most variability possible: hence the search for maximum variance, so that the *principal components* collect the most "uniqueness" from the data set.
 
 
 ```python
@@ -259,7 +259,7 @@ con_mat = np.cov(X_train_std.T)
    0 & 0 & 0 &... & \lambda_n
   \end{bmatrix} $$    
   
-  where $\lambda_i$ is the eigenvalue (a scalar) that defines the magnitude of the eigenvector. And eigenvectors represent the principle components (the direction of maximum variance).
+  where $\lambda_i$ is the eigenvalue (a scalar) that defines the magnitude of the eigenvector. And eigenvectors represent the principal components (the direction of maximum variance).
 
 
 ```python
@@ -277,7 +277,7 @@ print('\nEigenvalues \n%s'%eigen_val)
 ### 4. Sorting the eigenvalues 
 **by decreasing order to rank the eigenvectors**  
   
-Since we want to decrease the dimensionality of our dataset by compressing it into new feature subspace, we only select the subset of the eigenvectors(principle components) that contains most of the information(variance).  
+Since we want to decrease the dimensionality of our dataset by compressing it into new feature subspace, we only select the subset of the eigenvectors(principal components) that contains most of the information(variance).  
 Now let's plot the *variance explained ratios* of the eigenvalues:  
   
 $$\frac{\lambda_i}{\sum_{i=1}^{n}\lambda_i}$$
@@ -291,13 +291,13 @@ history = [(i/tot) for i in
 import matplotlib.pyplot as plt
 plt.bar(range(1,14),history, align = 'center', color = 'hotpink')
 plt.ylabel('Explained variance ratio')
-plt.xlabel('Principle component index')
+plt.xlabel('Principal component index')
 ```
 
 
 
 
-    Text(0.5, 0, 'Principle component index')
+    Text(0.5, 0, 'Principal component index')
 
 
 
@@ -305,7 +305,7 @@ plt.xlabel('Principle component index')
 ![](https://github.com/WZHOU007-0912/images/raw/master/PCA%20index.png)
 
 
-We can see that the first two principle components combined to explain almost 60% of the variance in the dataset.
+We can see that the first two principal components combined to explain almost 60% of the variance in the dataset.
 
 ### 5. Select K eigenvectors
 **which correspond to K largest eigenvalues**  
@@ -386,7 +386,7 @@ plt.show()
 ![](https://github.com/WZHOU007-0912/images/raw/master/output_28_0.png)
 
 
-- We can see that the data spread more on pc1 (the first principle component) than pc2, which is consistent with the variance explained ratios that we've calculated in section 4.
+- We can see that the data spread more on pc1 (the first principal component) than pc2, which is consistent with the variance explained ratios that we've calculated in section 4.
 
 ---------------
 # PCA in scikit-learn
